Anonymous | Login | 2021-01-23 11:57 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031050 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2019-10-09 18:15 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 5.2.2 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031050: Data Exchange - XmlXCAF persistence stores triangulation-only Faces without any geometry | ||||||||
Description | Saving triangulation-only geometry into XmlXCAF format leads to no geometry being actually saved due to optimization turned on by default (skip triangulation). | ||||||||
Steps To Reproduce | pload XDE OCAF MODELING VISUALIZATION ReadGltf D [locate_data_file bug30691_OrientationTest.glb] vclear vinit View1 XDisplay -dispMode 1 D -explore vfit Format D XmlXCAF XSave D copy.xml XOpen copy.xml DD vclear XDisplay -dispMode 1 DD -explore Result: An exception was caught 0000024C0E91B2F0 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000000 during 'READ' operation | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs caf bug31050 | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||
|
![]() |
|
(0087989) git (administrator) 2019-10-09 18:18 |
Branch CR31050 has been created by kgv. SHA-1: 8cbc651a802d93f2cc6c6ddf9d04d68ddc6b3c45 Detailed log of new commits: Author: kgv Date: Wed Oct 9 18:18:14 2019 +0300 0031050: Data Exchange - XmlXCAF persistence stores triangulation-only Faces without any geometry BRepTools_ShapeSet now ignores myWithTriangles flag in case if triangulation is the only geometry representation. |
(0087993) kgv (developer) 2019-10-09 22:17 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31050-master-KGV [^] |
(0088000) git (administrator) 2019-10-10 08:53 |
Branch CR31050 has been updated forcibly by kgv. SHA-1: 9ff8a62360e5e3d95e4ab8ce443710f3bf8647fe |
(0088001) git (administrator) 2019-10-10 08:59 |
Branch CR31050 has been updated forcibly by kgv. SHA-1: 42b659f30ddbdcb3b1df2737318f431dddde5c5f |
(0088010) gka (developer) 2019-10-10 11:19 |
Branch CR31050 was reviewed |
(0088485) git (administrator) 2019-10-23 11:51 |
Branch CR31050 has been deleted by kgv. SHA-1: 42b659f30ddbdcb3b1df2737318f431dddde5c5f |
![]() |
|||
occt: master 8c787b5f
Timestamp: 2019-10-09 15:18:14 Author: kgv Committer: apn [ Details ] [ Diff ] |
0031050: Data Exchange - XmlXCAF persistence stores triangulation-only Faces without any geometry BRepTools_ShapeSet now ignores myWithTriangles flag in case if triangulation is the only geometry representation. |
||
mod - src/BRepTools/BRepTools_ShapeSet.cxx | [ Diff ] [ File ] | ||
mod - tests/bugs/caf/bug27835 | [ Diff ] [ File ] | ||
add - tests/bugs/caf/bug31050 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-09 18:15 | kgv | New Issue | |
2019-10-09 18:15 | kgv | Assigned To | => gka |
2019-10-09 18:18 | git | Note Added: 0087989 | |
2019-10-09 18:28 | kgv | Relationship added | related to 0027835 |
2019-10-09 18:29 | kgv | Relationship added | child of 0028125 |
2019-10-09 18:31 | kgv | Product Version | 7.3.0 => 5.2.2 |
2019-10-09 22:17 | kgv | Note Added: 0087993 | |
2019-10-09 22:17 | kgv | Status | new => resolved |
2019-10-10 08:52 | kgv | Steps to Reproduce Updated | View Revisions |
2019-10-10 08:53 | git | Note Added: 0088000 | |
2019-10-10 08:59 | git | Note Added: 0088001 | |
2019-10-10 11:19 | gka | Note Added: 0088010 | |
2019-10-10 11:19 | gka | Assigned To | gka => bugmaster |
2019-10-10 11:19 | gka | Status | resolved => reviewed |
2019-10-23 01:07 | apn | Changeset attached | => occt master 8c787b5f |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | reviewed => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088485 | |
2019-10-23 16:54 | apn | Test case number | => bugs caf bug31050 |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |