0031050: Data Exchange - XmlXCAF persistence stores triangulation-only Faces without any geometry

BRepTools_ShapeSet now ignores myWithTriangles flag in case if triangulation is the only geometry representation.